# devops_movie_recommendations

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: process_movies_on_change.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/data/: movies.csv
data/: process_movies_script.py
frontend/: Dockerfile  index.html  old.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx
frontend/src/lib/: api.ts
